--- a/public/stylesheets/checkout.css
+++ b/public/stylesheets/checkout.css
@@ -1,4 +1,4 @@
-.mail-checkout {
+.main-checkout {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -8,7 +8,7 @@
     margin-bottom: 60px;
 }
 
-.mail-checkout .div-checkout-info {
+.main-checkout .div-checkout-info {
     display: flex;
     flex-direction: column;
     width: 100%;    
@@ -17,51 +17,51 @@
 
 /*** Estilo Resumo de Preços *******/
 
-.mail-checkout .div-checkout-resuso-preco {
+.main-checkout .div-checkout-resuso-preco {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    background-color: #eee;    
+    width: 100%;            
 }
 
-.mail-checkout .div-checkout-resuso-preco div {   
+.main-checkout .div-checkout-resuso-preco div {   
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
     padding: 15px 20px;
-    border-bottom: 1px solid white;           
+    border-bottom: 1px solid white;
+    background-color: #eee;           
 }
 
-.mail-checkout .div-checkout-resuso-preco div p {
+.main-checkout .div-checkout-resuso-preco div p {
     font-size: 0.875rem;
     font-weight: bold;   
     color: #777;        
 }
 
-.mail-checkout .div-checkout-resuso-preco .div-titulo-resumo h2 {
+.main-checkout .div-checkout-resuso-preco .div-titulo-resumo h2 {
     width: 100%;
     text-align: center;   
     font-size: 1.25rem;
     color: #333;
 }
 
-.mail-checkout .div-checkout-resuso-preco .div-total-para-pagar {
+.main-checkout .div-checkout-resuso-preco .div-total-para-pagar {
     background-color: #ccc;
 }
 
-.mail-checkout .div-checkout-resuso-preco .div-total-para-pagar p {
+.main-checkout .div-checkout-resuso-preco .div-total-para-pagar p {
     color: #333;
     font-size: 1.375rem;    
 }
 
-.mail-checkout .div-checkout-resuso-preco .div-total-a-vista-pagar {
+.main-checkout .div-checkout-resuso-preco .div-total-a-vista-pagar {
     display: flex;
     flex-direction: row;
     justify-content: center;
     background-color: #000;
 }
 
-.mail-checkout .div-checkout-resuso-preco .div-total-a-vista-pagar p {
+.main-checkout .div-checkout-resuso-preco .div-total-a-vista-pagar p {
     color: #fff;
     font-size: 0.875rem;    
 }
@@ -70,12 +70,12 @@
 
 /**** Estilo botões continuar progresso e voltal prograsso ****/
 
-.mail-checkout .div-checkout-info .div-botoes-continuar-voltar {
+.main-checkout .div-checkout-info .div-botoes-continuar-voltar {
     display: flex;
     flex-direction: column;    
 }
 
-.mail-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso {
+.main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -87,20 +87,20 @@
     border-radius: 7px; 
     margin-bottom: 10px;
     font-size: 0.75rem;
-    box-shadow: 3px 2px 10px 4px #888;   
+    box-shadow: 3px 2px 6px 4px #888;   
     transition: 0.3s;
 }
 
-.mail-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso:hover {
+.main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso:hover {
     background-color: #111;
 }
 
-.mail-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso span {
+.main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso span {
     margin-right: 10px;
     font-size: 1.25rem;
 }
 
-.mail-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-continuar-progresso {    
+.main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-continuar-progresso {    
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -112,15 +112,15 @@
     border-radius: 7px;
     font-weight: bold; 
     font-size: 0.875rem;
-    box-shadow: 3px 2px 10px 4px #888;   
+    box-shadow: 3px 2px 6px 4px #888;   
     transition: 0.3s;
 }
 
-.mail-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-continuar-progresso:hover {
+.main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-continuar-progresso:hover {
     background-color: #018302;
 }
 
-.mail-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-continuar-progresso span {
+.main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-continuar-progresso span {
     margin-left: 10px;
     font-size: 1.25rem;
 }
@@ -128,35 +128,36 @@
 
 /**************************************************************/
 
+
 /****************** @media *****************************/
 
 @media (min-width: 900px) { 
-    .mail-checkout {        
+    .main-checkout {        
         flex-direction: row;
         justify-content: space-between;        
         padding: 30px;        
     }
 
-    .mail-checkout .div-checkout-info {       
+    .main-checkout .div-checkout-info {       
         width: 64%;        
     }
 
-    .mail-checkout .div-checkout-resuso-preco {        
-        width: 34%;        
+    .main-checkout .div-checkout-resuso-preco {        
+        width: 34%; 
+        margin-top: 50px;       
     }
 
-    .mail-checkout .div-checkout-info .div-botoes-continuar-voltar {
+    .main-checkout .div-checkout-info .div-botoes-continuar-voltar {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
     }
 
-    .mail-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso {
-        width: 39%;
+    .main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso {
+        width: 36%;
     }
 
-    .mail-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-continuar-progresso {    
-        width: 59%;
+    .main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-continuar-progresso {    
+        width: 50%;
     }
-
 }
