--- a/views/checkout-confirmacao-pedido.ejs
+++ b/views/checkout-confirmacao-pedido.ejs
@@ -17,8 +17,8 @@
     <!--CSS-->
     <link rel="stylesheet" href="/stylesheets/base.css">       
     <link rel="stylesheet" href="/stylesheets/barra-progresso-pedido.css">
-    <link rel="stylesheet" href="/stylesheets/checkout.css">
-    <link rel="stylesheet" href="/stylesheets/checkout-confirmacao-pedido.css">
+    <link rel="stylesheet" href="/stylesheets/checkout.css">    
+    <link rel="stylesheet" href="/stylesheets/checkout-confirmacao-pedido.css">    
 </head>
 <body>   
     <%- include('./partials/header') %>
@@ -28,15 +28,8 @@
             <!--Comece aqui!-->
             <%- include('./partials/barra-progresso-pedido') %>
 
-            <main class="mail-checkout">
-                <div class="div-checkout-info">
-                    <div class="div-endereoco-entrega">
-                        <h2>Endereço de Entrega</h2>                        
-                    </div>
-
-                    <div class="div-transportadora-envio">
-                        <h2>Transportadora de Envio</h2>
-                    </div>
+            <main class="main-checkout">
+                <div class="div-checkout-info">                    
 
                     <div class="div-botoes-continuar-voltar">
                         <a href="/checkout/checkout-pagamento" class="btn-voltar-progresso">
