--- a/views/partials/barra-progresso-pedido.ejs
+++ b/views/partials/barra-progresso-pedido.ejs
@@ -11,7 +11,7 @@
             <span class=" material-icons-outlined">location_on</span>
         </li>
         <li>
-            <span class="material-icons-outlined">credit_card</span>
+            <span class="material-icons-outlined">attach_money</span>
         </li>
         <li>
             <span class="material-icons-outlined">done_outline</span>                        
@@ -30,7 +30,7 @@
             <span class="span-barra-progresso-pedido-editando material-icons-outlined">location_on</span>
         </li>
         <li>
-            <span class="material-icons-outlined">credit_card</span>
+            <span class="material-icons-outlined">attach_money</span>
         </li>
         <li>
             <span class="material-icons-outlined">done_outline</span>                        
@@ -48,7 +48,7 @@
             <span class="span-barra-progresso-pedido-concluido material-icons-outlined">location_on</span>
         </li>
         <li class="li-barra-progresso-pedido-editando">
-            <span class="span-barra-progresso-pedido-editando material-icons-outlined">credit_card</span>
+            <span class="span-barra-progresso-pedido-editando material-icons-outlined">attach_money</span>
         </li>
         <li>
             <span class="material-icons-outlined">done_outline</span>                        
@@ -66,7 +66,7 @@
             <span class="span-barra-progresso-pedido-concluido material-icons-outlined">location_on</span>
         </li>
         <li class="li-barra-progresso-pedido-concluido" onclick="location.href='/checkout/checkout-pagamento';" style="cursor:pointer">
-            <span class="span-barra-progresso-pedido-concluido material-icons-outlined">credit_card</span>
+            <span class="span-barra-progresso-pedido-concluido material-icons-outlined">attach_money</span>
         </li>
         <li class="li-barra-progresso-pedido-editando">
             <span class="span-barra-progresso-pedido-editando material-icons-outlined">done_outline</span>                        
