--- a/public/stylesheets/checkout.css
+++ b/public/stylesheets/checkout.css
@@ -72,7 +72,8 @@
 
 .main-checkout .div-checkout-info .div-botoes-continuar-voltar {
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
+    margin-top: -10px;    
 }
 
 .main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso {
@@ -151,6 +152,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        margin-top: 0;
     }
 
     .main-checkout .div-checkout-info .div-botoes-continuar-voltar .btn-voltar-progresso {
