--- a/views/checkout-confirmacao-pedido.ejs
+++ b/views/checkout-confirmacao-pedido.ejs
@@ -30,6 +30,70 @@
 
             <main class="main-checkout">
                 <div class="div-checkout-info">                    
+                    <div class="div-info-confirmacao">
+                        <h2>
+                            <span class="material-icons-outlined">task</span>
+                            Revisão do Pedido
+                        </h2>
+                        
+                        <div href="#" class="div-conteudo-confirmacao">
+                            <div class="div-meus-dados">
+                                <h3>
+                                    <span class="material-icons-outlined">person</span>
+                                    Meus Dados
+                                </h3>
+                                <p>Fernando Ferreira Mendonca</p>
+                                <p>fernandofm3@gmail.com</p>
+                                <p>CPF: 65496325856</p>
+                            </div>
+                                                        
+                            <div class="div-entrega">
+                                <h3>
+                                    <span class="material-icons-outlined">local_shipping</span>
+                                    Entrega
+                                </h3>
+                                <p>Destinatário: <b>Fernando Ferreira Mendonca</b></p>
+                                <p>Rua Doutor Ubaldo Franco Caiubi, Vila São Paulo, 313, Casa 12</p>
+                                <p>04651-020 - São Paulo / SP</p>
+                            </div>
+
+                            <div class="div-pagamento">
+                                <h3>
+                                    <span class="material-icons-outlined">credit_card</span>
+                                    Pagamento
+                                </h3>
+                                <p>BOLETO BANCÁRIO</p>                                    
+                            </div>
+                        </div>
+
+                        <div href="#" class="div-conteudo-confirmacao">
+                            <h3>
+                                <span class="material-icons-outlined">shopping_bag</span>
+                                Produto
+                            </h3>
+
+                            <div class="div-info-produto">
+                                <div class="img-produto">
+                                    <img src="/images/produtos/placa-de-video-gigabyte-nvidia-geforce-rtx-3060.jpg " alt="">
+                                    <p>
+                                        Lampada Inteligente Zinnia Crux CR100, 10W <br>
+                                        Wi-Fi, RGB, Branca, ZNS-ZNCR10W-RGBC01 <br>
+                                        SKU: ZNS-ZNCR10W-RGBC01
+                                    </p>
+                                </div>
+
+                                <div class="div-qt-produto">
+                                    <p class="p-titulos">QT</p>
+                                    <p>1</p>
+                                </div>
+                                
+                                <div class="div-preco-produto">
+                                    <p class="p-titulos">Preço</p>
+                                    <p>1x R$100,00</p>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>        
 
                     <div class="div-botoes-continuar-voltar">
                         <a href="/checkout/checkout-pagamento" class="btn-voltar-progresso">
