Continuação carrinho (foi feito o redirecionamento da página de criar endereço para a página de escolher o endereço para o pedido).

--- a/views/cadastroDeEndereco.ejs
+++ b/views/cadastroDeEndereco.ejs
@@ -112,6 +112,10 @@
                                 </div>
                             </div>
 
+                            <% if(locals.linkPedidoEndereco) { %> 
+                                <input type="hidden" name="linkPedidoEndereco" value="<%= linkPedidoEndereco %>">
+                            <% } %>
+
                             <div class="div-btn-cadastra-endereco">
                                 <button type="submit">CADASTRAR</button>                                
                             </div>                             
